Linguaggi++/mc_parser.output
Grammatica

    0 $accept: list_option "end of file"

    1 list_option: "end of file"
    2            | list "end of file"

    3 list: item
    4     | list item

    5 item: UPPER
    6     | LOWER
    7     | WORD
    8     | NEWLINE
    9     | CHAR


Simboli terminali e regole in cui appaiono

"end of file" (0) 0 1 2
error (256)
UPPER (258) 5
LOWER (259) 6
WORD (260) 7
NEWLINE (261) 8
CHAR (262) 9


Simboli nonterminali e regole in cui appaiono

$accept (8)
    nel primo membro: 0
list_option (9)
    nel primo membro: 1 2, nel secondo membro: 0
list (10)
    nel primo membro: 3 4, nel secondo membro: 2 4
item (11)
    nel primo membro: 5 6 7 8 9, nel secondo membro: 3 4


Stato 0

    0 $accept: . list_option "end of file"

    "end of file"  shift e prosecuzione allo stato 1
    UPPER          shift e prosecuzione allo stato 2
    LOWER          shift e prosecuzione allo stato 3
    WORD           shift e prosecuzione allo stato 4
    NEWLINE        shift e prosecuzione allo stato 5
    CHAR           shift e prosecuzione allo stato 6

    list_option  prosecuzione allo stato 7
    list         prosecuzione allo stato 8
    item         prosecuzione allo stato 9


Stato 1

    1 list_option: "end of file" .

    $default  riduzione con la regola 1 (list_option)


Stato 2

    5 item: UPPER .

    $default  riduzione con la regola 5 (item)


Stato 3

    6 item: LOWER .

    $default  riduzione con la regola 6 (item)


Stato 4

    7 item: WORD .

    $default  riduzione con la regola 7 (item)


Stato 5

    8 item: NEWLINE .

    $default  riduzione con la regola 8 (item)


Stato 6

    9 item: CHAR .

    $default  riduzione con la regola 9 (item)


Stato 7

    0 $accept: list_option . "end of file"

    "end of file"  shift e prosecuzione allo stato 10


Stato 8

    2 list_option: list . "end of file"
    4 list: list . item

    "end of file"  shift e prosecuzione allo stato 11
    UPPER          shift e prosecuzione allo stato 2
    LOWER          shift e prosecuzione allo stato 3
    WORD           shift e prosecuzione allo stato 4
    NEWLINE        shift e prosecuzione allo stato 5
    CHAR           shift e prosecuzione allo stato 6

    item  prosecuzione allo stato 12


Stato 9

    3 list: item .

    $default  riduzione con la regola 3 (list)


Stato 10

    0 $accept: list_option "end of file" .

    $default  accetta


Stato 11

    2 list_option: list "end of file" .

    $default  riduzione con la regola 2 (list_option)


Stato 12

    4 list: list item .

    $default  riduzione con la regola 4 (list)
